# rustracer

./: .gitignore  Cargo.toml  README.md  main  package-lock.json  package.json  scene.json
api/graphics/: mod.rs
api/math/: ray.rs
rustracer-api/: Cargo.toml
rustracer-api/src/: main.rs  render.rs
rustracer-cli/: Cargo.toml
rustracer-cli/src/: main.rs
rustracer-core/: Cargo.toml
rustracer-core/src/: raytracer.rs  scene.rs
rustracer-core/src/graphics/: color.rs  light.rs  material.rs  mod.rs  texture.rs  vec_writer.rs
rustracer-core/src/math/: mod.rs  ray.rs  sphere.rs  triangle.rs  vector.rs
rustracer-vue/: package-lock.json  package.json  tailwind.config.js  vite.config.js
rustracer-vue/src/: App.vue  main.js  style.css
rustracer-vue/src/assets/: default_material.js  default_scene.js
rustracer-vue/src/components/: LightEditor.vue  ObjectEditor.vue  ObjectList.vue  SceneEditor.vue  Sidebar.vue  SphereEditor.vue
src/: lib.rs  main.rs  scene.rs
src/graphics/: color.rs  light.rs  material.rs  texture.rs
src/math/: mod.rs
web/: package-lock.json  package.json
