[package]
name = "rustracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
cargo-lambda = "1.5.0"
jpeg-encoder = "0.6.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tide = "0.16.0"
zune-jpeg = "0.4.13"
