[package]
name = "rustracer-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustracer_core"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
jpeg-encoder = "0.6.0"
wavefront = "0.2.3"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tide = "0.16.0"
zune-jpeg = "0.4.13"
